[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
name = "frontend"
path = "src/lib.rs"

[dependencies]
lexer = { path = "lexer" }
parser = { path = "parser" }
validator = { path = "validator" }
notification = { path = "../notification" }
token = { path = "token" }
ast = { path = "../ast" }
